# libdeds

./: README.md  meson.build
doc/: algorithm.md
include/: bitreader.h  deds.h  ds.h  meson.build
src/: bitreader.c  libdeds.c  libds.c  meson.build  test
tests/: meson.build  test_bitreader.c  test_libdeds.c  test_libds.c
